[gd_scene load_steps=9 format=4 uid="uid://de5nita8tdxp2"]

[ext_resource type="Script" uid="uid://cbmu78axig5rp" path="res://Scenes/GameScenes/MainScene/level_selector_script.gd" id="1_8igxi"]
[ext_resource type="PackedScene" uid="uid://c3l5yht54dqeg" path="res://RawAssets/KayKit_Furniture_Bits_1.0_FREE/Assets/gltf/pictureframe_medium.gltf" id="2_eeeta"]
[ext_resource type="AudioStream" uid="uid://b2bty8mbl138k" path="res://RawAssets/OLD/Audio/Sounds/bookFlip3.ogg" id="3_eeeta"]
[ext_resource type="PackedScene" uid="uid://bun1nwy8j8qp5" path="res://Meshes/Cartridge.glb" id="3_n214n"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n214n"]
albedo_color = Color(0.7263139, 0.7263139, 0.7263138, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_phowq"]
_surfaces = [{
"aabb": AABB(-0.14692605, -1, -1, 0.2938521, 2, 2),
"format": 34896613377,
"index_count": 756,
"index_data": PackedByteArray("SgBLAEwATABLABsASgA5AEsATQBKAEwAOQBOAEsASwA2ABsASwBOADYAOQBPAE4AUAA5AEoAUQBPADkAUABRADkAUgBQAEoAUgBKAE0AUwBRAFAAVABQAFIAUwBQAFQAIQBSAE0AVABSAFUAVQBSACEAIQBNACcAVABVAFYAUwBUAFcAVABWAFcAVQAgAFYAVQAhACYAVQAmACAAIQAAACYAAAAhACcAJgAEACAAJgAAAAQAIABYAFYABAAAACMAAAAnACMAKQAgAAQAIAApAFgABAAjACoAKgApAAQAKgAiACkAWAApACIAKwAqACMAKgArACIAJwBZACMAKwAjAFkAWQAnAEUAKwBZAEMAWQBFAEMAWgAiACsAKwBDAFoAWgAIACIAQQBaAEMAQQAIAFoAQQBDAAIARQACAEMAQQACAEIAAgBFAEQAAgBEAEIAQQBCAEAAQAAIAEEACgBAAEIADQAiAAgAWAAiAA0AQAAkAAgAJABAAAoADQAIAFsAWwAIACQAXABYAA0AVgBYAFwAVgBcAFcAXAANAF0AXQANAFsAVwBcAF4AXgBcAF0AVwBeAF8AUwBXAF8AXgBdAGAAKABTAF8AKABRAFMAXwBeAB8AHwBeAGAAKABfAGEAXwAfAGEAKAADAFEAUQADAE8AYgAoAGEAYgADACgAYQAfAGMAYgBhAGQAYQBjAGQAYwAfAGUAHwBgAGUAZABjAAkAYwBlAGYAZgAJAGMAZAAJABkAZAAZAGIAGQAJABgAZgAYAAkAZwBiABkAYgBnAAMAGQAYACwALABnABkAAwBnABYALAAWAGcAAwAWAE8ALQAsABgALAAtABYAGABmAGgALQAYAGgATwAWAC8ATwAvAE4AaQAWAC0AaQAvABYALQBoAC4ALQAuAGkAEABoAGYAEAAuAGgATgAvADMAEgBpAC4AEgAvAGkAEgAuADAAMAAuABAAMQAvABIAMQAzAC8ATgAzADYAEgAUADEAEgAwABQAMwAxABMAEwAxABQAFwA2ADMAFwAzABMAMgAUADAAMgAwABAAEwAUABEAFAAyABEAEQAXABMAEAAVADIAEQAyABUAEQA0ABcAEQAVADQAagAXADQANgAXAGoANAAVADUAagA0ADUADAA2AGoANQAMAGoADAAbADYANQAVAA8ANQBrAAwANQAPAGsAOAAMAGsAGwAMADgAOABrADcAawAPADcAHAAbADgANwAcADgAHAA7ABsATAAbADsANwA6ABwANwAPAB4ANwAeADoAbAAcADoAbAA7ABwAbAA6ADwAHgA8ADoAPQA7AGwAPAA9AGwAHQBMADsATQBMAB0AJwBNAB0AJwAdAEUAHQA7AD4APQA+ADsASQBFAB0APABtAD0APAAOAG0APAAeAA4ACwA9AG0ACwA+AD0ACwBtAD8ADgA/AG0APwAHAAsABwA+AAsAPwAOACQAPwAkAAoAPwAKAAcAWwAkAA4ACgBCAAcAQgBEAAcABwBEAD4AbgBbAA4AbgAOAB4AXQBbAG4AYABdAG4AbwBuAB4AYABuAG8AbwAeAA8AZQBgAG8AGgBvAA8AZQBvABoAGgAPABUAZgBlABoAEAAaABUAZgAaABAASABEAEUASABFAEkARwBEAEgARwA+AEQARgA+AEcARgAdAD4ASQAdAEYARwBwAEYASQBxAEgASAByAEcAcwBJAEYAcQB0AEgASAB0AHIASQB1AHEAdQBJAHMAdABxAHYAdgBxAHUAcgB3AEcARwB3AHAAeAByAHQAdwByAHgAdAB2AHkAeAB0AHkAdgB1AHoAdgAlAHkAegAlAHYAeQAlAAYAeQAGAHgAegAFACUABQAGACUAewB6AHUAegB7AAUAewB1AHMAeAAGAHwAdwB4AHwABQABAAYAfAAGAAEAfQB3AHwAfAABAH0AfQBwAHcABQB+AAEAfQABAH4ABQB7AH4AfwBwAH0AfwB9AH4AewB/AH4AewBzAH8AcAB/AEYAcwBGAH8A"),
"lods": [0.13542783, PackedByteArray("IQAAACYAJgAAAAQAAAAhACcAAAAnACMABAAAACMAIQAdACcAJgAEACAAKAAhACYAKAAmACAAKAADACEAIQADAB0AKAAgAAkAGQADACgAGQAoAAkAKQAgAAQAAwAZABYAKgApAAQABAAjACoAIAApAB8AIAAfAAkAKgAiACkAHwApACIAKwAqACMAKgArACIAHwAiAA0ACQAfABoAHwANABoAGQAJABgACQAaABgAGQAYACwALAAWABkALQAsABgALAAtABYALQAYAC4AGAAaABAAEAAuABgALQAuAC8ALwAWAC0AMAAuABAAEgAvAC4AEgAuADAAMQAvABIAEgAwABQAEgAUADEAMgAwABAAMgAUADAAEAAVADIAEAAaABUAFAAyABEAEQAyABUAEwAxABQAEwAUABEAMQAzAC8AMwAxABMAFgAvADMAEQAXABMAFwAzABMAEQAVADQAEQA0ABcANAAVADUAFwA0ADUANQAVAA8AGgAPABUAFgAzADYAFwA2ADMAGgAeAA8ANQAMABcADAA2ABcANQAPADcANQA3AAwANwAPAB4AOAAMADcADAAbADYAGwAMADgAOQAWADYAOQA2ABsAAwAWADkAAwA5AB0AHQA5ABsANwAcADgAHAAbADgANwA6ABwANwAeADoAHAA7ABsAHQAbADsAHAA6ADwAHgA8ADoAPQA7ABwAPAA9ABwAPQA+ADsAHQA7AD4APAA/AD0APAAeAA4APAAOAD8ADQAOAB4AGgANAB4ADQAkAA4APwAOACQACwA9AD8ACwA+AD0APwAHAAsABwA+AAsAPwAkAAoAPwAKAAcADQAIACQADQAiAAgAJABAAAoAQAAkAAgAQQAIACIAQAAIAEEAQQAiACsACgBAAEIAQQBCAEAACgBCAAcAKwBDAEEAKwAjAEMAQQACAEIAQQBDAAIAQgBEAAcAAgBEAEIABwBEAD4ARQACAEMAIwBFAEMAAgBFAEQAIwAnAEUAJwAdAEUARgAdAD4ARwA+AEQARgA+AEcASABEAEUARwBEAEgASQBFAB0ASQAdAEYASABFAEkAAQBGAEcAJQBIAEkABQBJAEYAJQBJAAUABQBGAAEABgBIACUABQAGACUABgBHAEgABQABAAYAAQBHAAYA"), 0.5523804, PackedByteArray("EwAUABEAEgAUABMAEQAUABUAEgAQABQAEAAVABQAFgAQABIAFgASABMAEQAXABMAFgATABcAEQAVABcAFgAYABAAGQAYABYAEAAaABUAGAAaABAAGQAJABgACQAaABgAAwAZABYAGQADAAkAAwAWABcAFQAMABcADAAbABcAAwAXABsAFQAPAAwAGgAPABUAHAAbAAwADwAcAAwAHQADABsAHQAbABwADwAeABwAGgAeAA8AHgALABwAHQAcAAsAGgANAB4ACQAfABoAHwANABoAIAAfAAkAAwAgAAkAAwAhACAAIQADAB0AIAAEAB8AIQAEACAAHwAEACIAHwAiAA0AIQAAAAQABAAAACMAAAAhACMABAAjACIAIQAdACMAIgAjAAIAIwAdAAIADQAiAAgAIgACAAgADQAIACQACgAkAAgADQAkAA4ADgAkAAoADQAOAB4ACAAHAAoADgAKAAcACAACAAcAHgAOAAsADgAHAAsAJQAHAAIABgALAAcABgAHACUAAQALAAYAAQAdAAsABQAGACUABQABAAYAJQACAAUABQAdAAEABQACAB0A"), 1.8969388, PackedByteArray("AAABAAIAAAADAAEABAAAAAIAAwAAAAQABQACAAEABQABAAYABwACAAUABQAGAAcABAACAAgACAACAAcACQAEAAgAAwAEAAkACAAHAAoAAQALAAYABgALAAcAAQADAAwAAQAMAAsADQAIAAoACQAIAA0ADgAKAAcADgAHAAsADQAKAA4ADwAOAAsADwANAA4ACQANAA8ADwALAAwACQAPABAAAwAJABAAEQAPAAwAEAAPABEAAwAQABIAAwASAAwAEgAQABEAEQAMABMAEgATAAwAEgARABMA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 128,
"vertex_data": PackedByteArray("WgN+AC3sAAATEGdBlmMAAFoDACv//wAAAAB+AMofAACk/H4ALewAABMQZ0Ea6QAAExAa6ZZjAABaA///gP8AAP//+CqA/wAApPx+APoWAACk/P//gP8AAFoD//8vTQAAWgPr5jggAAD//zgpsUwAAP//gP8tTQAA///v5b4fAAD///kqfgAAAKT8//9+AAAAWgMAKwAAAABaA///fgAAAKT8gP8AAAAA//+A/04fAAAAALApeBcAAFoD//9LHwAApPy6KPoWAABaA34A+hYAAP//girKHwAAAADv5b4fAABaA23mwksAAAAAgiqxTAAA///v5b1MAAD//34Ayh8AAKT8AACv6wAAAAB+AK/rAAD//68pr+sAAFoDuigt7AAA//+A/4D/AAATEBrpGukAAFoDAACv6wAAAACvKa/rAABaAwAAyh8AAP//fgCv6wAApPy6KC3sAACk/EEpq+wAAFoDuij6FgAAWgM/KXwWAACk/HsqfQAAAAAA+Sp+AAAApPwAKwAAAABaA4D/AAAAAP//gP9+AAAAAACA/34AAACk/P//Sx8AAKT8gP/MHwAAAACA/04fAACk/G3muCAAAFoDbea4IAAAAAAaJTogAACk/G3mwksAAAAA7+W9TAAApPzr5kNMAABaA4D/r0wAAAAAgP8tTQAApPz//y9NAACk/ID///8AAKT8ACv//wAAWgOA////AABaA3oqgf8AAAAAgP+A/wAAAAD4KoD/AAAAAPw8K18AAAAAhO0rXwAAAACE7YTtAAAAAPw8hO0AAAAAGiVBTAAAAABDJjogAAAAAEMmQUwAAAAAOCmxTAAAAACCKsofAAAAADgpyh8AAAAAfgBBTAAAAAB+ADogAAAAAH4AsUwAAFoDAAA6IAAAWgMAAEFMAABaAwAAsUwAAKT8AACxTAAApPwAAEFMAAD//34AsUwAAFoDQSmr7AAApPx6KoH/AAD//4IqsUwAAP//fgBBTAAA//8aJUFMAAD//34AOiAAAKT8AAA6IAAA//8aJTogAACk/AAAyh8AAFoDAAB4FwAA//9+AHgXAACk/AAAeBcAAP//OCnKHwAA//+wKXgXAAAAAH4AeBcAAKT8Pyl8FgAAWgN7Kn0AAABaA4D/zB8AAKT86+Y4IAAAWgPr5kNMAACk/ID/r0wAAP//QyZBTAAA//9DJjogAADmAYY+EWAAAOYB++ue7AAA5gGe7LVgAADmAeI9++sAAOYBnuz76wAA5gGGPp7sAAAsDlzpAOoAAOYB++sRYAAALA4A6lNjAAAsDgDqXOkAACwOJEEA6gAALA6BQFzpAAAsDlzpsGIAACwOJEGwYgAALA6BQFNjAADmAeI9tWAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_w2n7o"]
resource_name = "Cartridge_Cube_002"
_surfaces = [{
"aabb": AABB(-0.14692605, -1, -1, 0.2938521, 2, 2),
"attribute_data": PackedByteArray("H2D//1lw5Ni/av//WXBF+v+f3/9GmuTY/59L0/+fncsfYPHHv2oov/+fmb/RoOV/vmrdfxtg0oDHn2V0KN9hdCjf338o37Ns25+xbCjfH0DVoB5ATWrTbL1qIUD/n9YAv2rWABtgLD8fYNYA/x8MeNYg/z/fn9aAa2qewMWfO3j/n9LHKN8seC5q1oAo35twoGoMeMefenAfYCi/358fQGtqMkAuatYAH2AMeClfI0DWIP9//x8jQMefmcv/n2PPoGor0x9g2/8uav//RppF+tYgI0DWIAx4H2AjQC5qKT9Paik/nmrWAL9qKT/fn9YA358pP9Wgs2wo3+Vs1aB+cNWgm3DVoER0KN9EdNag+nfWoCx435/ffy5qKL+/ataAnmrWgE9qKL++aiHA358ov9+fHsDFn8PHTWqvy/+fusvHn4TP/58Z08SfWdPfn9//35///71q0P+eav//YJvK12tqzP8+b8rXPm9g+2CbYPtNam3PoGqvy6Bqbc9NaivTImBtzx9gK9MiYK/LT2r//01q8cegavHHH2BxwP9fccCeaii/T2rWgGtqYH//nwTI/5+Az3hv/vqhbwPYeG8s2P6aA9hIcKvYJ5ss2Faaq9h/mtTYJ5v++v6aJvt/mlb6oW8m+1aaf/ofcFb6SHB/+h9w1NhNak90oGqRcKBqT3RNapFwTWoMeKBq02wiYE90ImCRcClfkXApX090H2CNfylfDHgpX41/1iCNf/8fjX//H0901iBPdP8fkXDWIJFw/x/TbClf02zWINNsH2DTbE9q1gCeaik/1qDlbCjffnDVoGF0KN/6dw=="),
"format": 34896613399,
"index_count": 756,
"index_data": PackedByteArray("XABdAF4AXgBdAC4AXABOAF0AXwBcAF4AYABOAFwAYQBgAFwAYQBcAF8AYABiAE4AMQBhAF8AMQBfAFgAAAAxAFgAAABYADIAWABjADIAYgBkAE4AYgAIAGQATgBkAGUATgBlAF0ACAAeAGQACABmAB4AZABKAGUAZAAeAEoAXQBlAE0AZgBnACYARgAeAGYARgBmACYAJgAiAEYARgBJAB4ASQBGACIAJgANACIAaAAeAEkAaABKAB4ASQAiAGkAagAiAA0AIgBqAGkASQBpAEgASQBIAGgADABIAGkADABpAGoACQBoAEgACQBKAGgACQBIAEcARwBIAAwASwBKAAkACQBHAB0ACQAdAEsARQBHAAwARQAdAEcACgBLAB0ASwBMAEoATABLAAoAZQBKAEwAIABMAAoAZQBMAE0AIABNAEwATQAgAGsABwBNAGsACgAdAAsAHQBFAAsABwAuAE0AXQBNAC4ALgAHAE8ALwAuAE8ALwBQAC4AbABQAC8AXgAuAFAAUQBQAGwAMABeAFAAXwBeADAAUQBSAFAAMABQAFIABgBSAFEAWABfADAABABSAAYAWAAwAFUAYwBYAFUAYwBVAFYAVQACAFYABABTAFIAAgBVAFMAVABTAAQAAgBTAFQAWgBVADAAWQAwAFIAWgAwAFkAVwBSAFMAWQBSAFcAWwBTAFUAWwBVAFoAVwBTAFsAbQBaAFkAVwBuAFkAbQBZAG8AbgBvAFkAVwBwAG4AbwBuAHEAcQBuAHAAcgBwAFcAWwByAFcAcQBwAHMAcAByAHQAcAB0AHMAdAByAHUAWwB1AHIAdgB1AFsAWgB2AFsAdAB1AHcAWgB4AHYAeABaAG0AdQB2AHkAeQB2AHgAdQB5AHcAegB4AG0AegBtAG8AeQB4AHsAegB7AHgAeQAzAHcAewAzAHkAdwAFAHQAdwAzAAUAdAAFAHMAewADADMAewB6AAMAAwAFADMAcwAFAAEAAwABAAUAcwABAHEAAwB6AHwAAwB8AAEAcQABAHwAegBvAHwAbwBxAHwAfQB+AH8AfwB+ACUAfQCAAH4AgQB9AH8AgACCAH4AfgASACUAfgCCABIAgAAVAIIAgwCAAH0AhAAVAIAAgwCEAIAAKgCDAH0AKgB9AIEAhQCEAIMAhgCDACoAhQCDAIYAhwAqAIEAhgAqAIgAiAAqAIcAhwCBAGoAagANAIcAagCBACQAiQCHAA0AiACHAIkAiQANACwAiQAsAIoAigCIAIkAgQB/ACQAagAkAAwAJAB/AA4ADAAkAB8AJAAOAB8ADAAfAEUACwBFAB8AigA1AIgANQCGAIgAigAbADUAigCLABsANQAbAIwANQCNAIYANQCMAI0AjQCFAIYAjQCMAI4AjQCOAI8AjQCPAIUAjwCOAJAAjwCRAIUAkQCEAIUAjwCQAJIAjwCSAJEAkgCQAC0AkQCTAIQAhACTABUAkgArAJEAKwCTAJEAkgAtADQAkgA0ACsALQAcADQANAAcABkANAAZACsAKwA2AJMANgArABkAkwA2ACgAkwAoABUANwA2ABkANwAoADYAGQApADcAGQAaACkAOAA3ACkANwA4ACgAOAApAJQAOACUADkAlQAoADgAOAA5AJUAFQAoABYAlQAWACgAFQAWAIIAOgCVADkAOgAWAJUAOgA5ABgAOgAYADsAPAAWADoAOgA7ADwAggAWACcAPAAnABYAggAnABIAFAA8ADsAJwA8ABQAFAA7ABcAPQAnABQAPQASACcAPQAUABMAPQATABEAEQCWAD0AEgA9AJYAEQA+AJYAPwASAJYAPwCWAD4APwA+AJcAPwAlABIAlwBAAD8AJQA/AEAAlwAjAEAAQQBAACMAQQAlAEAAQQAjAEIAQQAOACUAfwAlAA4AQgCYAEEAmAAOAEEAQgAPAJgAQwAOAJgAQwCYAA8AQwAfAA4AQwAPAJkARAAfAEMAmQBEAEMACwAfAEQAmQAhAEQACwBEACEACwAhABAA"),
"lods": [0.13542783, PackedByteArray("LQAcADQANAAcABkANQAtADQANQAbAC0ALAAbADUALAA1AA0ANQA0ACsANAAZACsANQArAA0AGQAaACkANgArABkAGQApADcANwA2ABkAOAA3ACkAOAApADkANwAoADYANwA4ACgAKwA2ACoAKwAqAA0AKgA2ACgAOAA5ADoAOgAoADgAOgA5ABgAOgAYADsAKgAoABUAOgAWACgAFQAoABYAOgA7ADwAPAAWADoAFAA8ADsAFAA7ABcAPAAnABYAJwA8ABQAFQAWACcAPQAnABQAPQAUABMAPQATABEAEQA+AD0APQASACcAFQAnABIAPwA9AD4APwASAD0APwA+ACMAFQASACUAPwAlABIAIwBAAD8AJQA/AEAAQQBAACMAQQAlAEAAQQAjAEIAQgAPAEEAJAAVACUAKgAVACQADQAqACQAQQAOACUAJAAlAA4AQwBBAA8AQwAOAEEAQwAPACEAJAAOAB8AQwAfAA4ADQAkACIAIQBEAEMARAAfAEMACwBEACEACwAfAEQACwAhABAAJgANACIACwBFAB8ADAAkAB8ADAAfAEUAIgAkAAwAJgAiAEYAHQBFAAsACgAdAAsARQBHAAwARQAdAEcADABIACIARwBIAAwASQBGACIASQAiAEgARgAeACYARgBJAB4ACAAmAB4ACQBIAEcACQBHAB0ASQBIAEoACQBKAEgASgAeAEkACQAdAEsASwBKAAkACgBLAB0ASwBMAEoATABLAAoAHgBKAEwAIABMAAoAIABNAEwAHgBMAE0ABwBNACAATgAeAE0ACAAeAE4ABwAuAE0ATgBNAC4ALgAHAE8ALwAuAE8ACABOADAAMABOAC4ALwBQAC4AMAAuAFAAUQBQAC8AMQAIADAAUQBSAFAAMABQAFIABgBSAFEABABSAAYABABTAFIAVABTAAQAAgBTAFQAAgBVAFMAVQACAFYAMgBVAFYAVwBSAFMAMgBYAFUAAABYADIAAAAxAFgAMQAwAFgAWAAwAFUAWQAwAFIAWQBSAFcAWgBVADAAWgAwAFkAWwBTAFUAWwBVAFoAVwBTAFsAMwBbAFoAAQBZAFcABQBXAFsAAQBXAAUABQBbADMAAwBZAAEAAwABAAUAAwBaAFkAAwAFADMAMwBaAAMA"), 0.5523804, PackedByteArray("CgAdAAsACQAdAAoAHgAJAAoACwAdAB8AHgAKACAACwAhABAACwAfACEACQAMAB0AHgAMAAkADAAfAB0AHwAPACEAHgAiAAwAHwAOAA8ADgAjAA8ADAAkAB8AJAAOAB8AIgAkAAwADgAlACMAJAAlAA4AJQARACMAJgAiAB4ACAAmAB4AJgANACIADQAkACIACAAeACAAJQASABEAEgATABEAEgAUABMAFQASACUAJAAVACUAEgAnABQAFQAnABIAFAAnABYAFQAWACcAFgAXABQAFgAYABcAKAAYABYAFQAoABYAKAApABgAKgAVACQAKgAoABUADQAqACQAGQApACgAKgAZACgAGQAaACkAKwAqAA0AKwAZACoAGwArAA0ALAAbAA0AGwAtACsALQAZACsALQAcABkABwAuACAACAAgAC4ALwAuAAcAMAAIAC4AMAAuAC8AMQAIADAAMAAvAAYAAAAxADIAMQAwADIAMgAwAAIAAQAwAAYAAwACADAAAwAwAAEAMwACAAMAMwAEAAIAAwABAAUAAwAFADMAAQAGAAUABQAEADMABQAGAAQA"), 1.8969388, PackedByteArray("AAABAAIAAwACAAEABAACAAMAAwAFAAQAAwABAAUABQAGAAQAAQAGAAUAAQAHAAYAAAAIAAEAAQAIAAcACAAJAAcACQAKAAcACQALAAoACAAMAAkACQAMAAsACAANAAwADAAOAAsADQAOAAwACwAPABAACwAOAA8ADgARAA8ADgASABEAEgATABEAEgAUABMADgAVABIAFQAUABIADQAVAA4AFQAWABQADQAWABUAFgAXABQAFgAYABcADQAZABYAGQAYABYAGQAaABgAGwAZAA0AGwAcABkA")],
"material": SubResource("StandardMaterial3D_n214n"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 154,
"vertex_data": PackedByteArray("WgN+AC3szsQTEGdBlmNCz1oDACv//9fAExBnQRrprtVaA///gP+XtRMQGumWY7nVWgP//y9NDc5aA+vmOCBsrAAAfgDKHyjfWgMAKwAAxf9aA///fgAm0aT8//9+AC79///5Kn4AIdGk/H4A+hZK7P//7+W+H93VWgPr5jggtPxaA///fgBX9FoD//8vTVT0//+A/y1NjeNaA///gP//96T8//+A/17s//84KbFMW9X///gqgP/s1FoD//+A/1HQWgMAK///o7+k/H4ALextrVoDfgAt7BLFAAB+AMofyMxaA34ALeySmqT8gP8AANz8AACwKXgXJ/P//4D/Th+T11oD//9LH5C6WgP//0sfBPik/Loo+hYF6VoDbebCS+7u//+CKsof4dT//+/lvUzM2VoDfgD6FpD9//+A/4D/g9j//68pr+vp6loDuigt7Pq+//9+AMofyMyk/AAAr+u4s1oDfgD6FhLxAAB+AK/rz78AAO/lvh9J0FoDbebCS43KAACCKrFMR9UAAH4Ar+uc1FoDuigt7LfBExAa6RrpJ9taAwAAr+sItFoDAADKH4zB//9+AK/rocOk/LooLexRxqT8QSmr7EvZWgN6KoH/isak/AAr//+gxFoDgP///4fFpPyA////786k/P//L03W91oDgP+vTBTypPzr5kNMgu6k/G3mwku79qT8bea4IKnpWgNt5rggaPOk/ID/zB/F66T8//9LH4Lv//+A/34A/+VaA7oo+hZq+aT8ACsAAPLrpPx7Kn0A8dZaAz8pfBbh6wAA+Sp+AE3yWgOA/wAAf+sAAID/fgD90QAAgP9OH8rEAAAaJTogVNVaA23muCAZwQAA7+W9TLrVWgOA/69Mu+sAAID/LU3y1gAAgP+A/53DWgOA////UrUAAPgqgP83xloDeiqB/7DFAACE7StfdtUAAK8pr+vqwAAA/DwrX6zTAAD8PITtdNUAAITthO381gAAGiVBTFTVAABDJjogUNUAAEMmQUxR1QAAOCmxTFPVAAB+AEFMGd8AAH4AsUwZ3wAAfgA6IBnfWgNBKavsDsQAADgpyh9U1QAAgirKH1rVAAB+AHgXdeZaAwAAeBfJ+loDeyp9AO7opPw/KXwWU9H//7ApeBfOxloDgP/MH6ivWgPr5kNMJuzmAeI9++tZ0eYBhj4RYHjL5gHiPbVgkcvmAfvrEWCF0SwOJEGwYrvI5gGe7LVgJNssDlzpsGJv0CwOAOpTY33d5gGe7Pvr8t7mAfvrnuwC3ywOAOpc6aXh5gGGPp7s/9osDlzpAOrO4SwOgUBc6R/QLA4kQQDqMd0sDoFAU2PoyP//GiU6IFTV//9DJkFMUNX//0MmOiBR1f//GiVBTFTV//84KcofTdX//4IqsUxa1f//fgA6IMjM//9+AEFMyMyk/AAAQUyMwaT8AAA6IIzB//9+AHgXs9ek/AAAyh+MwaT8AAB4FzjPWgMAAHgXZM8AAH4AeBcb2gAAfgA6IMjMWgMAADogjMEAAH4AQUzHzFoDAABBTIzBAAB+ALFMx8yk/AAAsUyMwVoDAACxTIzB//9+ALFMycxaA0Epq+zYxaT8eiqB/8jTpPyA/69MZfVaA+vmQ0zy6qT86+Y4IEzqWgOA/8wfTf3O3gP/3NiK0wne+v+R1c/PU/aeqYrVn9oa2Kalw+Uf2xTQ5t8QSD1LILxUsjo+DRQlP/AwEyt5TkwqiSb2Zy6OYnfoxnJ3z8b2N9gi4nMKr1M0AgSiKq4qdQ8tM1Do8i88Inr/ewuGJ+re5v42SZqk+k7Zn5c+ry0k7NPHSypXG339qVDnczCvvT4KOuhyBcI2K2Qq3C0AKVTDYtBlKfMb3w3YNurbRfabJMk2vhDpVyYWg4PWUKil7Nf30yjWn65F1VzVoNP75XTdTvWm0TDXYyhcj20kNpK2IC4wwwl3IXIVPdBZMHvkQwBO37b+4yBoHcQELUNYDW98K+ivVEQYrDrSFYo0TQrvbjCvFRZpDPsyRQaNNI4lAs3TyP5BQz5wUl5G10zoXLPZNc/JxK+8UccbzMLgV89U1VTVHfwJs83VxtD00qayC9ZkxULf0c9r+cHanMar7i4wleN31cPWc7JM7FbW09R41cLTVdTU1VTVVNVP1VbVUNVW1VLVVdUG0PHfBtDx3wbQ8d+aNwLmVNVU1VvVUNUKzP3Zk7/V7o5N9FccVb5ByE7THW32ZNi42n+069haykPbFtc424HN1NjT3BTdDdjc0h7fONr63grS0+Faz4/cTM891KfN79720uHNk82103Haz8Y10t7L89ydyqoqqiqvKqgqriqoKqoqqiqyKqYqoyquKpskyTabJMk2NhKRWzYSkVuhKCA7NhKRW98REmGEHmSQl0KRozZJmqRtJDaSNkmbpG0kN5I2SZukNhKRW20kNpKZJMk26DdE6DsZWNQ8V5UUfHuj6sITYRSUbyyS")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_phowq")

[sub_resource type="BoxShape3D" id="BoxShape3D_1eq8u"]
size = Vector3(3.4595337, 1, 4.393982)

[node name="Level1" type="Node3D"]
transform = Transform3D(0.85837847, 0, 0.513017, 0, 1, 0, -0.513017, 0, 0.85837847, 0, 0, 0)
script = ExtResource("1_8igxi")

[node name="visual" parent="." instance=ExtResource("2_eeeta")]
transform = Transform3D(5, 0, 0, 0, -2.1855695e-07, 2, 0, -5, -8.742278e-08, 0, 0, 0)
visible = false

[node name="Cartridge" parent="." instance=ExtResource("3_n214n")]
transform = Transform3D(-7.649494e-08, 1.3212133e-07, 1.75, -1.75, -7.649493e-08, -7.6494935e-08, 7.649492e-08, -1.75, 1.3212133e-07, 1.0122163e-08, 0.23156807, -1.0122159e-08)

[node name="Cube" parent="Cartridge" index="0"]
mesh = SubResource("ArrayMesh_w2n7o")

[node name="Label3D" type="Label3D" parent="Cartridge"]
transform = Transform3D(-2.497794e-08, 5.3290705e-15, -0.5714286, 2.9802322e-08, 0.57142854, 0, 0.57142854, -2.9802322e-08, -2.497794e-08, -0.13806964, 0.33561605, -0.1979827)
text = "Level 1"
font_size = 102
horizontal_alignment = 0

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.016447067, 0, 0.009921074)
shape = SubResource("BoxShape3D_1eq8u")

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_eeeta")
volume_db = -15.0

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]

[editable path="Cartridge"]
